Project/yal2jvm.java
/* yal2jvm.java */
/* Generated By:JJTree&JavaCC: Do not edit this line. yal2jvm.java */
import java.io.*;
import java.util.*;
import java.nio.charset.Charset;
import java.nio.file.Files;
import java.nio.file.Paths;

public class yal2jvm/*@bgen(jjtree)*/implements yal2jvmTreeConstants, yal2jvmConstants {/*@bgen(jjtree)*/
  protected static JJTyal2jvmState jjtree = new JJTyal2jvmState();
    public static final String ANSI_RESET = "\u001b[0m";
    public static final String ANSI_RED = "\u001b[31m";
    public static final String ANSI_GREEN = "\u001b[32m";
    public static final String ANSI_CYAN = "\u001b[36m";
    public static String fileName = "";
    public static String errorIn = "";

    public static void main(String args[]) throws ParseException {
        yal2jvm parser;

        if(args.length == 0){
            System.out.println (ANSI_CYAN + "yal2jvm:" + ANSI_RESET + " Reading input ...");
            parser = new yal2jvm(System.in);
        }
        else if(args.length == 1){
            fileName = args[0];
            System.out.println (ANSI_CYAN + "yal2jvm:" + ANSI_RESET + " Reading the file " + args[0] + " ..." + ANSI_RESET);
            try {
                parser = new yal2jvm(new java.io.FileInputStream(fileName));
            }
                catch(java.io.FileNotFoundException e) {
                System.out.println (ANSI_CYAN + "yal2jvm:" + ANSI_RED + " The file " + args[0] + " was not found." + ANSI_RESET);
                return;
            }
        }
        else {
            System.out.println (ANSI_CYAN + "yal2jvm:" + ANSI_RESET + " You must use one of the following:");
            System.out.println ("         java yal2jvm < file");
            System.out.println ("Or");
            System.out.println ("         java yal2jvm file");
            return ;
        }
        try {
            SimpleNode root = parser.Module();
            root.dump("");
            System.out.println (ANSI_CYAN + "yal2jvm:" + ANSI_GREEN + " The input was read sucessfully." + ANSI_RESET);
        }
        catch(ParseException e){
            System.out.println (ANSI_CYAN + "yal2jvm:" + ANSI_RED + " There was an error during the parse." + ANSI_RESET);
            System.out.println (e.getMessage());
        }
        catch(TokenMgrError e){
            System.out.println (ANSI_CYAN + "yal2jvm:" + ANSI_RED + " There was an error." + ANSI_RESET);
            System.out.println (e.getMessage());
        }
    }

//Module ::= <MODULE> <ID> <LCHAVETA> ( Declaration )* ( Function )* <RCHAVETA>
  static final public SimpleNode Module() throws ParseException {/*@bgen(jjtree) Module */
                       ASTModule jjtn000 = new ASTModule(JJTMODULE);
                       boolean jjtc000 = true;
                       jjtree.openNodeScope(jjtn000);Token s; errorIn = "MODULE()";
    try {
      try {
        jj_consume_token(MODULE);
        s = jj_consume_token(ID);
jjtn000.name = s.image;
        jj_consume_token(LCHAVETA);
      } catch (ParseException e) {
System.out.print(e.toString());
        skip_to(LCHAVETA);
      }
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case ID:{
          ;
          break;
          }
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
        Declaration();
      }
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case FUNCTION:{
          ;
          break;
          }
        default:
          jj_la1[1] = jj_gen;
          break label_2;
        }
        Function();
      }
      try {
        jj_consume_token(RCHAVETA);
      } catch (ParseException e) {
System.out.print(e.toString());
        skip_to(RCHAVETA);
      }
jjtree.closeNodeScope(jjtn000, true);
        jjtc000 = false;
{if ("" != null) return jjtn000;}
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
    throw new Error("Missing return statement in function");
  }

//Declaration ::= ( ArrayElement | ScalarElement ) ( <ASSIGN> ( ( "[" ArraySize "]" ) | ( <ADDSUB_OP> )? <INTEGER> ) )? <PVIRG>
  static final public void Declaration() throws ParseException {/*@bgen(jjtree) Declaration */
                      ASTDeclaration jjtn000 = new ASTDeclaration(JJTDECLARATION);
                      boolean jjtc000 = true;
                      jjtree.openNodeScope(jjtn000);Token s1, s2; errorIn = "DECLARATION()";
    try {
      try {
        Element();
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case ASSIGN:{
          jj_consume_token(ASSIGN);
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case 31:{
            jj_consume_token(31);
            ArraySize();
            jj_consume_token(32);
            break;
            }
          case ADDSUB_OP:
          case INTEGER:{
            switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
            case ADDSUB_OP:{
              s1 = jj_consume_token(ADDSUB_OP);
jjtn000.operator = s1.image;
              break;
              }
            default:
              jj_la1[2] = jj_gen;
              ;
            }
            s2 = jj_consume_token(INTEGER);
jjtn000.integer = s2.image;
            break;
            }
          default:
            jj_la1[3] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
          break;
          }
        default:
          jj_la1[4] = jj_gen;
          ;
        }
        jj_consume_token(PVIRG);
      } catch (ParseException e) {
System.out.print(e.toString());
        skip_to(PVIRG);
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

//Function ::= ( ( <FUNCTION> ( ArrayElement | ScalarElement ) <ASSIGN> <ID> <LPAR> ( Varlist )? <RPAR> ) | ( <FUNCTION> <ID> <LPAR> ( Varlist )? <RPAR> ) ) <LCHAVETA> Stmtlst <RCHAVETA>
  static final public void Function() throws ParseException {/*@bgen(jjtree) Function */
                   ASTFunction jjtn000 = new ASTFunction(JJTFUNCTION);
                   boolean jjtc000 = true;
                   jjtree.openNodeScope(jjtn000);Token s1,s2; errorIn = "FUNCTION()";
    try {
      try {
        jj_consume_token(FUNCTION);
        s1 = jj_consume_token(ID);
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case ASSIGN:
        case 31:{
          FunctionReturn(s1);
          jj_consume_token(ASSIGN);
          s2 = jj_consume_token(ID);
jjtn000.name = s2.image;
          jj_consume_token(LPAR);
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case ID:{
            Varlist();
            break;
            }
          default:
            jj_la1[5] = jj_gen;
            ;
          }
          jj_consume_token(RPAR);
          break;
          }
        case LPAR:{
          jj_consume_token(LPAR);
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case ID:{
            Varlist();
            break;
            }
          default:
            jj_la1[6] = jj_gen;
            ;
          }
          jj_consume_token(RPAR);
jjtn000.name = s1.image;
          break;
          }
        default:
          jj_la1[7] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      } catch (ParseException e) {
System.out.print(e.toString());
        skip_to(RPAR);
      }
      try {
        jj_consume_token(LCHAVETA);
        Stmtlst();
        jj_consume_token(RCHAVETA);
      } catch (ParseException e) {
System.out.print(e.toString());
        skip_to(RCHAVETA);
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void FunctionReturn(Token id) throws ParseException {/*@bgen(jjtree) Element */
  ASTElement jjtn000 = new ASTElement(JJTELEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
jjtn000.name = id.image;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 31:{
        jj_consume_token(31);
ASTArrayElement jjtn001 = new ASTArrayElement(JJTARRAYELEMENT);
           boolean jjtc001 = true;
           jjtree.openNodeScope(jjtn001);
        try {
          jj_consume_token(32);
        } finally {
if (jjtc001) {
             jjtree.closeNodeScope(jjtn001, true);
           }
        }
        break;
        }
      default:
        jj_la1[8] = jj_gen;
jjtree.closeNodeScope(jjtn000, true);
                             jjtc000 = false;

      }
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

//Varlist ::= ( ArrayElement | ScalarElement ) ( <VIRG> ( ArrayElement | ScalarElement ) )*
  static final public void Varlist() throws ParseException {/*@bgen(jjtree) Varlist */
  ASTVarlist jjtn000 = new ASTVarlist(JJTVARLIST);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      Element();
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case VIRG:{
          ;
          break;
          }
        default:
          jj_la1[9] = jj_gen;
          break label_3;
        }
        jj_consume_token(VIRG);
        Element();
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
  }

//ScalarElement ::= <ID>
  static final public void ScalarElement() throws ParseException {/*@bgen(jjtree) ScalarElement */
                        ASTScalarElement jjtn000 = new ASTScalarElement(JJTSCALARELEMENT);
                        boolean jjtc000 = true;
                        jjtree.openNodeScope(jjtn000);errorIn = "SCALARELEMENT()";
    try {
      try {
        jj_consume_token(ID);
      } catch (ParseException e) {
System.out.print(e.toString());
        skip_to(PVIRG);
      }
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void ArrayElement() throws ParseException {/*@bgen(jjtree) ArrayElement */
  ASTArrayElement jjtn000 = new ASTArrayElement(JJTARRAYELEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(31);
      jj_consume_token(32);
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void Element() throws ParseException {/*@bgen(jjtree) Element */
                  ASTElement jjtn000 = new ASTElement(JJTELEMENT);
                  boolean jjtc000 = true;
                  jjtree.openNodeScope(jjtn000);Token s;
    try {
      s = jj_consume_token(ID);
jjtn000.name = s.image;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 31:{
        ArrayElement();
        break;
        }
      default:
        jj_la1[10] = jj_gen;
jjtree.closeNodeScope(jjtn000, true);
                        jjtc000 = false;

      }
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

//Stmtlst ::= ( Stmt )*
  static final public void Stmtlst() throws ParseException {
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case WHILE:
      case IF:
      case ID:{
        ;
        break;
        }
      default:
        jj_la1[11] = jj_gen;
        break label_4;
      }
      Stmt();
    }
  }

//Stmt ::= While | If | Assign | Call <PVIRG>
  static final public void Stmt() throws ParseException {errorIn = "CALL()";
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case WHILE:{
      While();
      break;
      }
    case IF:{
      If();
      break;
      }
    default:
      jj_la1[12] = jj_gen;
      if (jj_2_1(3)) {
        Assign();
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case ID:{
          try {
            Call();
            jj_consume_token(PVIRG);
          } catch (ParseException e) {
System.out.print(e.toString());
        skip_to(PVIRG);
          }
          break;
          }
        default:
          jj_la1[13] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
  }

//Assign ::= Lhs <ASSIGN> Rhs <PVIRG>
  static final public void Assign() throws ParseException {/*@bgen(jjtree) Assign */
                 ASTAssign jjtn000 = new ASTAssign(JJTASSIGN);
                 boolean jjtc000 = true;
                 jjtree.openNodeScope(jjtn000);errorIn = "ASSIGN()";
    try {
      try {
        Lhs();
        jj_consume_token(ASSIGN);
      } catch (ParseException e) {
System.out.print(e.toString());
        Token t;
       skip_to(ASSIGN);
      }
      try {
        Rhs();
        jj_consume_token(PVIRG);
      } catch (ParseException e) {
System.out.print(e.toString());
        skip_to(PVIRG);
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

//Lhs ::= ArrayAccess | ScalarAccess
  static final public void Lhs() throws ParseException {
    Access();
  }

//Rhs ::= ( Term ( ( <ARITH_OP> | <BITWISE_OP> | <ADDSUB_OP> ) Term )? ) | "[" ArraySize "]" 
  static final public void Rhs() throws ParseException {/*@bgen(jjtree) Rhs */
              ASTRhs jjtn000 = new ASTRhs(JJTRHS);
              boolean jjtc000 = true;
              jjtree.openNodeScope(jjtn000);Token s;
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case ADDSUB_OP:
      case INTEGER:
      case ID:{
        Term();
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case ADDSUB_OP:
        case ARITH_OP:
        case BITWISE_OP:{
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case ARITH_OP:{
            s = jj_consume_token(ARITH_OP);
jjtn000.operator = s.image;
            break;
            }
          case BITWISE_OP:{
            s = jj_consume_token(BITWISE_OP);
jjtn000.operator = s.image;
            break;
            }
          case ADDSUB_OP:{
            s = jj_consume_token(ADDSUB_OP);
jjtn000.operator = s.image;
            break;
            }
          default:
            jj_la1[14] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
          Term();
          break;
          }
        default:
          jj_la1[15] = jj_gen;
          ;
        }
        break;
        }
      case 31:{
        jj_consume_token(31);
        ArraySize();
        jj_consume_token(32);
        break;
        }
      default:
        jj_la1[16] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

//ArraySize ::= ScalarAccess | <INTEGER>
  static final public void ArraySize() throws ParseException {/*@bgen(jjtree) ArraySize */
                    ASTArraySize jjtn000 = new ASTArraySize(JJTARRAYSIZE);
                    boolean jjtc000 = true;
                    jjtree.openNodeScope(jjtn000);Token s1,s2;
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case ID:{
        s1 = jj_consume_token(ID);
jjtn000.name = s1.image;
        ScalarAccess();
        break;
        }
      case INTEGER:{
        s2 = jj_consume_token(INTEGER);
jjtree.closeNodeScope(jjtn000, true);
                                                                        jjtc000 = false;
jjtn000.value = s2.image;
        break;
        }
      default:
        jj_la1[17] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

//Term ::= ( <ADDSUB_OP> )? ( <INTEGER> | Call | ArrayAccess | ScalarAccess )
  static final public void Term() throws ParseException {/*@bgen(jjtree) Term */
               ASTTerm jjtn000 = new ASTTerm(JJTTERM);
               boolean jjtc000 = true;
               jjtree.openNodeScope(jjtn000);Token s1, s2;
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case ADDSUB_OP:{
        s1 = jj_consume_token(ADDSUB_OP);
jjtn000.operator = s1.image;
        break;
        }
      default:
        jj_la1[18] = jj_gen;
        ;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INTEGER:{
        s2 = jj_consume_token(INTEGER);
jjtree.closeNodeScope(jjtn000, true);
                     jjtc000 = false;
jjtn000.operator = s2.image;
        break;
        }
      default:
        jj_la1[19] = jj_gen;
        if (jj_2_2(3)) {
          Call();
        } else {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case ID:{
            Access();
            break;
            }
          default:
            jj_la1[20] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

//Exprtest ::= <LPAR> Lhs <RELA_OP> Rhs <RPAR>
  static final public void Exprtest() throws ParseException {/*@bgen(jjtree) Exprtest */
                   ASTExprtest jjtn000 = new ASTExprtest(JJTEXPRTEST);
                   boolean jjtc000 = true;
                   jjtree.openNodeScope(jjtn000);Token s;
    try {
      jj_consume_token(LPAR);
      Lhs();
      s = jj_consume_token(RELA_OP);
jjtn000.operator = s.image;
      Rhs();
      jj_consume_token(RPAR);
    } catch (Throwable jjte000) {
if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

//While ::= <WHILE> Exprtest <LCHAVETA> Stmtlst <RCHAVETA>
  static final public void While() throws ParseException {/*@bgen(jjtree) While */
                ASTWhile jjtn000 = new ASTWhile(JJTWHILE);
                boolean jjtc000 = true;
                jjtree.openNodeScope(jjtn000);errorIn = "WHILE()";
    try {
      try {
        jj_consume_token(WHILE);
        Exprtest();
        jj_consume_token(LCHAVETA);
      } catch (ParseException e) {
System.out.print(e.toString());
        skip_to(LCHAVETA);
      }
      try {
        Stmtlst();
        jj_consume_token(RCHAVETA);
      } catch (ParseException e) {
System.out.print(e.toString());
        skip_to(RCHAVETA);
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }
